Do not call GetDisplayDevice for older UPower versions.

On Linux, older versions of UPower did not have the GetDisplayDevice
method. Trying to call it generates log spam.

Modernize the modified file with base::MakeUnique while we are here.

BUG=695383

Review-Url: https://codereview.chromium.org/2795713003
Cr-Commit-Position: refs/heads/master@{#463358}

Former-commit-id: 91037c1a4a82985c652ac38826fd5b3fc6d56d91